[package]
name = "soar"
version = "0.1.0"
authors = ["Sam Scott <sam.scott89@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Build a generic service-oriented architecture using actix."

[dependencies]
actix = "0.7.9"
actix-web = "0.7.16"
anymap = "0.12.1"
bincode = "1.0.1"
env_logger = "0.6.0"
failure = "0.1.3"
futures = "0.1.25"
log = "0.4.6"
serde = "1.0.82"
serde_derive = "1.0.82"
url = "1.7.2"

[features]
default = []
use_nightly = []
print_types = ["use_nightly"]
