[package]
name = "actix-directory"
version = "0.1.0"
authors = ["Sam Scott <sam.scott89@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Request routing infrastructure for Actix web apps"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.17"
anymap = "0.12.1"
bincode = "1.0.1"
env_logger = "0.6.0"
failure = "0.1.5"
futures = "0.1.25"
log = "0.4.6"
serde = { version = "1.0.84", features = ["serde_derive"] }
url = "1.7.2"
# tokio-io = "0.1.11"
tokio-stdin-stdout = "0.1.5"
tokio-codec = "0.1.1"
jsonrpc-core = "9.0.0"
serde_json = "1.0.34"
jsonrpc-client-core = { git = "https://github.com/mullvad/jsonrpc-client-rs/" }
tokio = "0.1.14"
jsonrpc-ipc-server = "9.0.0"
parity-tokio-ipc = "0.1.0"
tokio-reactor = "0.1.8"
jsonrpc-client-ipc = { git = "https://github.com/mullvad/jsonrpc-client-rs/" }

[features]
default = []
full_debug = ["debugging_info", "print_types"]
debugging_info = []
print_types = ["use_nightly"]
use_nightly = []
