[package]
name = "actix-directory"
version = "0.1.0"
authors = ["Sam Scott <sam.scott89@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Request routing infrastructure for Actix web apps"

[dependencies]
actix = "0.7.9"
actix-web = { version = "0.7.17", features = ["uds"] }
anymap = "0.12.1"
bincode = "1.0.1"
env_logger = "0.6.0"
failure = "0.1.5"
futures = "0.1.25"
log = "0.4.6"
serde = { version = "1.0.84", features = ["serde_derive"] }
serde_json = "1.0.34"
tempfile = "3.0.5"
tokio = "0.1.14"
tokio-codec = "0.1.1"
tokio-reactor = "0.1.8"
tokio-stdin-stdout = "0.1.5"
url = "1.7.2"
tokio-uds = "0.2.5"

[features]
default = []
full_debug = ["debugging_info", "print_types"]
debugging_info = []
print_types = ["use_nightly"]
use_nightly = []

[[bin]]
name = "test-plugin"
path = "src/test_plugin.rs"
